--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ section p {
 section h1 {
 	font: 32px 'Open Sans';
 	font-weight: bold;
+	color: #b3b3b3;
 }
 section p {
 	font: 16px 'Open Sans';
